Working on logging via winston. This is currently not working so I will be creating an issue for this so I may move onto creating the UI component.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "test": "grunt"
   },
-  "dependencies": {},
+  "dependencies": {
+    "winston": "~0.7.3"
+  },
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-coffeelint": "0.0.8",
