--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "playlist",
   "main": "lib/playlist",
   "version": "0.1.1",
-  "description": "Queue and play music directly from Atom.",
+  "description":
+    "Queue and play music directly from Atom.  (deep in development)",
   "license": "MIT",
   "private": true,
   "repository": {
