Working on #5. Now switching over to using the Soundcloud SDK.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "grunt"
   },
   "dependencies": {
-    "winston": "~0.7.3"
+    "winston": "~0.7.3",
+    "soundcloud-stream": "0.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
