--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "atom": ">0.50.0"
   },
   "scripts": {
-    "test": "grunt"
+    "test": "grunt",
+    "postinstall": "node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "winston": "~0.7.3",
@@ -28,6 +29,7 @@
     "grunt-coffeelint": "0.0.8",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-lesslint": "~1.0.0",
-    "grunt-apm": "0.0.1"
+    "grunt-apm": "0.0.1",
+    "bower": "~1.3.5"
   }
 }
