--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   "dependencies": {
     "winston": "~0.7.3",
     "soundcloud-stream": "0.0.2",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "bower": "~1.3.5"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-coffeelint": "0.0.8",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-lesslint": "~1.0.0",
-    "grunt-apm": "0.0.1",
-    "bower": "~1.3.5"
+    "grunt-apm": "0.0.1"
   }
 }
