Closes #12. Restructured project. Major refactoring.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playlist",
   "main": "lib/playlist",
   "version": "0.1.6",
-  "description": "Queue and play music directly from Atom.  (deep in development)",
+  "description": "Ultimate collaborative music player for Atom.",
   "license": "MIT",
   "private": true,
   "repository": {
@@ -24,7 +24,12 @@
     "winston": "~0.7.3",
     "soundcloud-stream": "0.0.2",
     "font-awesome": "~4.1.0",
-    "bower": "~1.3.5"
+    "bower": "~1.3.5",
+    "async": "^0.9.0",
+    "lodash": "^2.4.1",
+    "open": "0.0.5",
+    "youtube-node": "^1.0.1",
+    "soundclouder": "^0.7.10"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
