Closes #15. Working iTunes support!
See #9. Tracks play once added to queue. No pause method yet.

Closes #19. Refactored some class/file names.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playlist",
-  "main": "lib/playlist",
+  "main": "lib/index",
   "version": "0.1.6",
   "description": "Ultimate collaborative music player for Atom.",
   "license": "MIT",
@@ -29,7 +29,8 @@
     "lodash": "^2.4.1",
     "open": "0.0.5",
     "youtube-node": "^1.0.1",
-    "soundclouder": "^0.7.10"
+    "soundclouder": "^0.7.10",
+    "applescript": "^0.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
